* 0.144

- Use JsonMapperParsingException in SmileMapper.

* 0.143

- Deprecate usages of CompletableFuture or replace with ListenableFuture,
  which is easier to use and less error prone.
- Add MoreFutures methods for ListenableFuture.
- Replace RuntimeIOException with UncheckedIOException in HTTP client.
- Fix sporadic failure due to thread-safety when performing Bean Validation.
- Support using java.time.Instant for event client.
- Validate scheme for HTTP client Request objects.

* 0.142

- Improve performance of QuantileDigest copy constructor, which
  could cause contention in Distribution's copy constructor.

* 0.141

- Fix thread-safety issue in Distribution copy constructor.

* 0.140

- Fix rare bug when inserting into Sparse HLL that could result
  in corruption.
- Improve performance and memory utilization for QuantileDigest.
- Improve performance when generating trace tokens.
- Add BasicAuthRequestFilter for HttpClient to pre-authenticate
  requests with basic authentication.
- Add bindConfigGlobalDefaults to ConfigBinder to customize
  defaults for bound config objects.
- Buffer HTTP responses in chunks to avoid allocating big byte arrays.
- Update QuantileDigest serialization to take and produce Slice objects.

* 0.139

- Upgrade to Jetty 9.3.13.M0
- Make jmxutils dependency optional for concurrent
- Add TempFile for use with try-with-resources
- Add unwrapCompletionException to MoreFutures
- Fix incorrect bucket computation in PauseMeter

* 0.138

- Add toJsonWithLengthLimit to JsonCodec
- Fix version check in JMX module to work with -ea Java versions
- Move type name to end of JsonCodec error message
- Add brackets around JSON in HTTP client response handler error messages
- Add utility to measure JVM and OS pauses

* 0.137

- Set ThreadContextClassLoader to null when loading bval

* 0.136

- Revert Jetty to 9.3.9.M1

* 0.135

- Add ThreadLocalCache
- Upgrade to Jackson 2.8.1
- Extract units to a standalone project